// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Avatar renders avatar 1`] = `
<img
  alt=""
  class="dse-avatar"
  data-testid="avatar"
  role="img"
  src="https://avatars.githubusercontent.com/u/583231?v=3"
/>
`;

exports[`Avatar renders avatar with style provided 1`] = `
<img
  alt=""
  class="dse-avatar"
  data-testid="avatar"
  role="img"
  src="https://avatars.githubusercontent.com/u/583231?v=3"
  style="width: 100px;"
/>
`;
